--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -4,14 +4,18 @@
 @tailwind utilities;
 
 /* Google Fonts */
-.lato-regular {
+@font-face {
   font-family: "Lato", serif;
+  src: url(./assets/font/Lato-Regular.ttf);
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
-.lato-bold {
+@font-face {
   font-family: "Lato", serif;
+  src: url(./assets/font/Lato-Bold.ttf);
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
